

==============================
Release 2.4.1.X
==============================
2015-03-22    LogWriter: Add some settings how exactly the log line should be formatted


==============================
Release 2.4.0.X
==============================
2015-02-20    CodedUIEnvironment: The listener was not configurable
              LoggedException: Add LoggedException to write error to the activity logs
              LogWriter: Add configurable activity logs
2015-02-14    Add possibilies to the the window size, position and state into the BasicWindow.Unsafe
              WindowSetup: Add new WindowSetup object for a more easy window setup
2015-02-10    CodedUIEnvironment: Add possibility to configure the listeners from the CodedUIEnvironment
              *Listener: Allow async invoke of the listener events
2015-01-10    BasicElementData: Add IsEnabled property
              BasicElementData: Add IsVisible property
              *Listener: Add possibility to get informed if a window or element state changed
2014-12-12    WindowFinder: Add WrongSetupException to be thrown if an assembly is missing which prevents CodedUI to run
              UI: Add possibility to search with the setting that the element have to be usable (visible and enabled)


==============================
Release 2.2.0.X
==============================
2014-07-15    BasicElements: Add possibility to make a shadow copy of each basic element
              UI: Add possibility to read the full UI tree as a shadow copy
              BasicWindow: GetChildWindows was return windows even they are not the child windows
2014-07-13    BasicWindowBase: Implement Equals with use of the NativeWindowHandle
              Do: Add possibility to repeat Do actions
2014-07-12    BasicWindowBase: Add possibility to get the parent window of another window
              BasicWindowBase: Add possibility to throw an exception if the parent window is not available